--- a/machine_1.html
+++ b/machine_1.html
@@ -5,11 +5,24 @@
 
 </head>
 <body>
-
+<div id="stack">
+</div>
+<div id ="command">
+<ul id ="log">
+<li>2</li>
+</ul>
+</div>
+<div id='regs'>
+<ul id='regs'>
+</ul>
+</div>
 <script>
  
  test_evaluator();
  
+
+ 
+
  //test_machine();
 
 </script>
